--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,5 @@
 # [Choice] Debian OS version: bullseye, buster
-ARG VARIANT=${templateOption:imageVariant}
-FROM --platform=linux/amd64 mcr.microsoft.com/devcontainers/base:0-${VARIANT}
+FROM --platform=linux/amd64 mcr.microsoft.com/devcontainers/base:0-bullseye
 
 ENV DENO_INSTALL=/deno
 RUN mkdir -p /deno \
