--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -29,3 +29,15 @@ jobs:
           http_url: https://www.ifixit.com/smartphone-repairability?sort=date # The data to fetch every 5 minutes
           downloaded_filename: ifixit/smartphone-repairability.html # The http_url gets saved and renamed in our repository as ifixit/smartphone-repairability.html
           postprocess: ifixit/postprocess.ts # A postprocessing javascript or typescript file written in Deno
+      - name: Fetch data 
+        uses: githubocto/flat@v3
+        with:
+          http_url: https://www.ifixit.com/laptop-repairability?sort=date
+          downloaded_filename: ifixit/laptop-repairability.html
+          postprocess: ifixit/postprocess.ts
+      - name: Fetch data 
+        uses: githubocto/flat@v3
+        with:
+          http_url: https://www.ifixit.com/tablet-repairability?sort=date
+          downloaded_filename: ifixit/tablet-repairability.html
+          postprocess: ifixit/postprocess.ts
