--- a/.github/workflows/flat.ifixit.yml
+++ b/.github/workflows/flat.ifixit.yml
@@ -1,9 +1,9 @@
-name: Flat
+name: ifixit
 
 on:
   push:
     paths:
-      - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
+      - .github/workflows/flat.ifixit.yml # Only run a new workflow every time this file (flat.yaml) file changes
   workflow_dispatch: # Required even though this is currently empty
   schedule:
     # Run this workflow: At 8:08am on every 5th day from 1st through 31st
